# advanced-powerup-example

./: .bumpversion.cfg  .coveragerc  .dockerignore  .gitignore  LICENSE  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.circleci/: config.yml
docker/release/: Dockerfile
docker/scripts/: bootstrap.sh  build.sh  entrypoint.sh
synmods/examplepowerup/: __init__.py  service.py  version.py
synmods/examplepowerup/assets/: __init__.py  synapse-examplepowerup.yaml
synmods/examplepowerup/assets/docs/: adminguide.rst  changelog.rst  userguide.rst
synmods/examplepowerup/assets/storm/commands/: examplepowerup.enrich.storm  examplepowerup.search.storm
synmods/examplepowerup/assets/storm/modules/: examplepowerup.ingest.storm  examplepowerup.privsep.storm  examplepowerup.setup.storm  examplepowerup.storm  examplepowerup.workflows.storm
synmods/examplepowerup/tests/: common.py  test_assets.py  test_service.py
